tests/suite/fail/modules/selective_priv.ny
//~ ERROR cannot import `secret`
import { secret } from "helpers.ny"

fn main() {
    print(1)
}
